--- a/HHManager/src/main/webapp/WEB-INF/web.xml
+++ b/HHManager/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,6 @@
 
     <servlet-mapping>
         <servlet-name>jersey-serlvet</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
+        <url-pattern>/server/*</url-pattern>
     </servlet-mapping>
 </web-app>
