--- a/HHManager/pom.xml
+++ b/HHManager/pom.xml
@@ -14,11 +14,18 @@
     </properties>
 
     <repositories>
+        <repository>
+            <id>maven-repository</id>
+            <url>file:///${project.basedir}/lib</url>
+        </repository>
     </repositories>
 
-
-
     <dependencies>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.0</version>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
